<resources>
    <string name="app_name">TrainingCenterProject</string>
    <string name="title_activity_instructor_home">InstructorHome</string>
    <string name="title_activity_instructor_home_view">InstructorHomeView</string>
    <string name="admin_view_string">TRAINEE VIEW</string>
    <string name="image">image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_trainees_available_courses">TraineesAvailableCourses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="view_profile">View Profile</string>
    <string name="view_available_courses">View Available Courses</string>
    <string name="search_course">Search Course</string>
    <string name="view_studied_courses">View Studied Courses</string>
    <string name="view_courses_history">View Courses History</string>
    <string name="logout">Logout</string>
    <string name="main_page">Main Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="center_courses">Center Courses</string>
    <string name="available_courses">Available Courses</string>
    <string name="completed_courses">Completed Courses</string>
    <string name="scroll_view_speakable_text">Scroll View</string>
</resources>