<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/view_profile" />
        <item
            android:id="@+id/nav_available_courses"
            android:icon="@drawable/baseline_check_24"
            android:title="@string/view_available_courses" />
        <item
            android:id="@+id/nav_search_courses"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/search_course" />
        <item
            android:id="@+id/nav_studied_course"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/view_studied_courses" />
        <item
            android:id="@+id/nav_courses_history"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/view_courses_history" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/baseline_logout_24"
             android:title="@string/logout" />
    </group>
</menu>